<?xml version="1.0"?>
<package format="3">
  <name>serial_utils</name>
  <version>0.1.0</version>
  <description>A package which adds useful additions to the serial package.</description>

  <maintainer email="wjwwood@gmail.com">William Woodall</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/wjwwood/serial_utils</url>
  <url type="bugtracker">http://github.com/wjwwood/serial_utils/issues</url>

  <author email="wjwwood@gmail.com">William Woodall</author>
  <author email="ash.gti@gmail.com">John Harrison</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
